--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width-device-width, initial-scale=1.0" />
         <title>Web Studio</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css">
         <link rel="stylesheet" href="./css/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    </head>
+        
+</head>
     <body>
         <header class="header">
+        <div class="container">
             
             <nav class="navbar">
                 <a class="logo" href="./index.html">Web<span class="span-studio">Studio</span></a>
-                <ul>
+                <ul class="navbar-list">
                     <li><a class="navbar-punkt" href="./index.html">Studio</a></li>
                     <li><a class="navbar-punkt" href="">Portfolio</a></li>
                     <li><a class="navbar-punkt" href="">Contacts</a></li>
@@ -22,19 +25,21 @@
             </nav>
 
             <address class="contact">
-                <ul>
+                <ul class="contact-list">
                     <li><a class="contact-way" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li><a class="contact-way" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
+         </div>  
         </header>
         <main>
             <section class="title">
+            <div class="container">
                 <h1 class="title-capture">Effective Solutions for Your Business</h1>
                 <button type="button" class="order-button">Order Service</button>
             </section>
-            <section class="strengths">
-                <h2 class="section-title">Our strengths</h2>
+            <div class="strengths">
+                <h2 class="visually-hidden">Our strengths</h2>
                 <ul class="strengths-list">
                     <li>
                         <h3 class="strengths-list-title">Strategy</h3>
@@ -61,8 +66,10 @@
                         </p>
                     </li>
                 </ul>
+            </div>
             </section>
             <section class="team">
+            <div class="container">
                 <h2 class="team-title">Our Team</h2>
                 <ul>
                     <li class="team-list">
@@ -86,9 +93,10 @@
                         <p class="team-list-text">UI Designer</p>
                     </li>
                 </ul>
-
+            </div>
             </section>
             <section class="portfolio">
+            <div class="container">
                 <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul>
                     <li>
@@ -122,14 +130,16 @@
                         <p class="portfolio-list-text">Marketing</p>
                     </li>
                 </ul>
+            </div>
             </section>
         </main>
-        <footer class="footer">
+        < class="footer">
+            <div class="container">
             <a class="logo" href="./index.html">Web<span class="span-studio">Studio</span></a>
             <p class="footer-text">
                 Increase the flow of customers and sales for your business with digital marketing & growth solutions.
             </p>
-
+        </div>
         </footer>
 
     </body>
