--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
     <body>
         <header class="header">
-        <div class="container">
+        <div class="container header-container">
             
             <nav class="navbar">
-                <a class="logo" href="./index.html">Web<span class="span-studio">Studio</span></a>
+                <a class="logo header-logo" href="./index.html">Web<span class="span-studio">Studio</span></a>
                 <ul class="navbar-list">
                     <li><a class="navbar-punkt" href="./index.html">Studio</a></li>
                     <li><a class="navbar-punkt" href="">Portfolio</a></li>
