--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
         </header>
         <main>
             <section class="title">
-            <div class="container">
+            <div class="container container-title">
                 <h1 class="title-capture">Effective Solutions for Your Business</h1>
                 <button type="button" class="order-button">Order Service</button>
+            </div>
             </section>
             <div class="strengths">
                 <h2 class="visually-hidden">Our strengths</h2>
