--- a/index.html
+++ b/index.html
@@ -39,28 +39,29 @@
                 <button type="button" class="order-button">Order Service</button>
             </div>
             </section>
-            <div class="strengths">
+            <section class="strengths">
+            <div class="container">
                 <h2 class="visually-hidden">Our strengths</h2>
                 <ul class="strengths-list">
-                    <li>
+                    <li class="strengths-item">
                         <h3 class="strengths-list-title">Strategy</h3>
                         <p class="strengths-list-text">
                             Our goal is to identify the business problem to walk away with the perfect and creative solution. 
                         </p>
                     </li>
-                    <li>
+                    <li class="strengths-item">
                         <h3 class="strengths-list-title">Punctuality</h3>
                         <p class="strengths-list-text">
                             Bring the key message to the brand's audience for the best price within the shortest possible time.
                         </p>
                     </li>
-                    <li>
+                    <li class="strengths-item">
                         <h3 class="strengths-list-title">Diligence</h3>
                         <p class="strengths-list-text">
                             Research and confirm brands with the strongest digital growth opportunities and minimize risk.
                         </p>
                     </li>
-                    <li>
+                    <li class="strengths-item">
                         <h3 class="strengths-list-title">Technologies</h3>
                         <p class="strengths-list-text">
                             Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
@@ -72,26 +73,34 @@
             <section class="team">
             <div class="container">
                 <h2 class="team-title">Our Team</h2>
-                <ul>
-                    <li class="team-list">
+                <ul class="team-list">
+                    <li class="team-list-item">
                         <img src="./images/teamcard1.jpg" alt="Photo" width="264"/>
-                        <h3 class="team-list-title">Mark Guerrero</h3>
-                        <p class="team-list-text">Product Designer</p>
+                        <div class="team-member">
+                             <h3 class="team-list-title">Mark Guerrero</h3>
+                             <p class="team-list-text">Product Designer</p>
+                        </div>
                     </li>
-                    <li class="team-list">
+                    <li class="team-list-item">
                         <img src="./images/teamcard2.jpg" alt="Photo" width="264"/>
-                        <h3 class="team-list-title">Tom Ford</h3>
-                        <p class="team-list-text">Frontend Developer</p>
+                        <div class="team-member">
+                             <h3 class="team-list-title">Tom Ford</h3>
+                             <p class="team-list-text">Frontend Developer</p>
+                        </div>
                     </li>
-                    <li class="team-list">
+                    <li class="team-list-item">
                         <img src="./images/teamcard3.jpg" alt="Photo" width="264"/>
-                        <h3 class="team-list-title">Camila Garcia</h3>
-                        <p class="team-list-text">Marketing</p>
+                        <div class="team-member">
+                            <h3 class="team-list-title">Camila Garcia</h3>
+                            <p class="team-list-text">Marketing</p>
+                        </div>
                     </li>
-                    <li class="team-list">
+                    <li class="team-list-item">
                         <img src="./images/teamcard4.jpg" alt="Photo" width="264"/>
-                        <h3 class="team-list-title">Daniel Wilson</h3>
-                        <p class="team-list-text">UI Designer</p>
+                        <div class="team-member">
+                            <h3 class="team-list-title">Daniel Wilson</h3>
+                             <p class="team-list-text">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
