--- a/index.html
+++ b/index.html
@@ -108,42 +108,55 @@
             <section class="portfolio">
             <div class="container">
                 <h2 class="portfolio-title">Our Portfolio</h2>
-                <ul>
-                    <li>
+                <ul class="portfolio-list">
+                    <li class="portfolio-list-item">
                         <img src="./images/portf_bank.jpg" alt="bank" width="360">
+                        <div class="portfolio-description">
                         <h3 class="portfolio-list-title">Banking App</h3>
                         <p class="portfolio-list-text">App</p>
+                        </div>
                     </li>
-                    <li>
+                    <li class="portfolio-list-item">
                         <img src="./images/portf_cash.jpg" alt="cachless" width="360">
+                        <div class="portfolio-description">
                         <h3 class="portfolio-list-title">Cashless Payment</h3>
                         <p class="portfolio-list-text">Marketing</p>
+                        </div>
                     </li>
-                    <li>
+                    <li class="portfolio-list-item">
                         <img src="./images/portf_medit.jpg" alt="meditation" width="360">
+                        <div class="portfolio-description">
                         <h3 class="portfolio-list-title">Meditation App</h3>
                         <p class="portfolio-list-text">App</p>
+                        </div>
                     </li>
-                    <li>
+                    <li class="portfolio-list-item">
                         <img src="./images/portf_taxi.jpg" alt="taxi" width="360">
+                        <div class="portfolio-description">
                         <h3 class="portfolio-list-title">Taxi Service</h3>
                         <p class="portfolio-list-text">Marketing</p>
+                        </div>
+
                     </li>
-                    <li>
+                    <li class="portfolio-list-item">
                         <img src="./images/portf_screen.jpg" alt="Illustrations" width="360">
+                        <div class="portfolio-description">
                         <h3 class="portfolio-list-title">Screen Illustrations</h3>
                         <p class="portfolio-list-text">Design</p>
+                        </div>
                     </li>
-                    <li>
+                    <li class="portfolio-list-item">
                         <img src="./images/portf_course.jpg" alt="Course" width="360">
-                        <h3 class="portfolio-list-title">Online Courses</h3>
-                        <p class="portfolio-list-text">Marketing</p>
+                        <div class= "portfolio-description">
+                             <h3 class="portfolio-list-title">Online Courses</h3>
+                            <p class="portfolio-list-text">Marketing</p>
+                        </div>
                     </li>
                 </ul>
             </div>
             </section>
         </main>
-        < class="footer">
+        <footer class="footer">
             <div class="container">
             <a class="logo" href="./index.html">Web<span class="span-studio">Studio</span></a>
             <p class="footer-text">
