--- a/index.html
+++ b/index.html
@@ -106,32 +106,32 @@
             </div>
             </section>
             <section class="portfolio">
-            <div class="container">
+            <div class="container portfolio-container">
                 <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-list-item">
-                        <img src="./images/portf_bank.jpg" alt="bank" width="360">
+                        <img class="portfolio-img" src="./images/portf_bank.jpg" alt="bank" width="360">
                         <div class="portfolio-description">
                         <h3 class="portfolio-list-title">Banking App</h3>
                         <p class="portfolio-list-text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-list-item">
-                        <img src="./images/portf_cash.jpg" alt="cachless" width="360">
+                        <img class="portfolio-img" src="./images/portf_cash.jpg" alt="cachless" width="360">
                         <div class="portfolio-description">
                         <h3 class="portfolio-list-title">Cashless Payment</h3>
                         <p class="portfolio-list-text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-list-item">
-                        <img src="./images/portf_medit.jpg" alt="meditation" width="360">
+                        <img class="portfolio-img" src="./images/portf_medit.jpg" alt="meditation" width="360">
                         <div class="portfolio-description">
                         <h3 class="portfolio-list-title">Meditation App</h3>
                         <p class="portfolio-list-text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-list-item">
-                        <img src="./images/portf_taxi.jpg" alt="taxi" width="360">
+                        <img class="portfolio-img" src="./images/portf_taxi.jpg" alt="taxi" width="360">
                         <div class="portfolio-description">
                         <h3 class="portfolio-list-title">Taxi Service</h3>
                         <p class="portfolio-list-text">Marketing</p>
@@ -139,14 +139,14 @@
 
                     </li>
                     <li class="portfolio-list-item">
-                        <img src="./images/portf_screen.jpg" alt="Illustrations" width="360">
+                        <img class="portfolio-img" src="./images/portf_screen.jpg" alt="Illustrations" width="360">
                         <div class="portfolio-description">
                         <h3 class="portfolio-list-title">Screen Illustrations</h3>
                         <p class="portfolio-list-text">Design</p>
                         </div>
                     </li>
                     <li class="portfolio-list-item">
-                        <img src="./images/portf_course.jpg" alt="Course" width="360">
+                        <img class="portfolio-img" src="./images/portf_course.jpg" alt="Course" width="360">
                         <div class= "portfolio-description">
                              <h3 class="portfolio-list-title">Online Courses</h3>
                             <p class="portfolio-list-text">Marketing</p>
@@ -158,7 +158,7 @@
         </main>
         <footer class="footer">
             <div class="container footer-container">
-            <a class="logo" href="./index.html">Web<span class="span-studio">Studio</span></a>
+            <a class="logo down-logo" href="./index.html">Web<span class="span-studio">Studio</span></a>
             <p class="footer-text">
                 Increase the flow of customers and sales for your business with digital marketing & growth solutions.
             </p>
