--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </section>
         </main>
         <footer class="footer">
-            <div class="container footer-container">
+            <div class="container">
             <a class="logo down-logo" href="./index.html">Web<span class="span-studio">Studio</span></a>
             <p class="footer-text">
                 Increase the flow of customers and sales for your business with digital marketing & growth solutions.
